--- a/sentinel服务治理学习笔记/流量控制学习.md
+++ b/sentinel服务治理学习笔记/流量控制学习.md
@@ -97,7 +97,7 @@
 
 :flags:
 
-## 第二部分（降级规则）
+## 第二部分（降级规则--3 种）
 
 图18开始
 
@@ -117,7 +117,7 @@
 
 ![21](D:/音乐图片/typora图片/image-20220526232045980.png)
 
-:flags:第二种降级 异常比例
+:flags:第二种降级 异常比例(解释 如果连续发送10次请求，异常次数3次  3/10=0.333大于0.25  这样就满足了降级条件， 就会停止这个接口的请求权限 5s后，再允许请求)
 
 ![22](D:/音乐图片/typora图片/image-20220526233106512.png)
 
@@ -133,7 +133,15 @@
 
 
 
-:flags: 降级规则之  热点规则
+## 
+
+
+
+
+
+## ==热点规则4.6.3==
+
+
 
 ![25](D:/音乐图片/typora图片/image-20220527123227003.png)
 
@@ -165,9 +173,38 @@
 注意图31 的参数配置的地方 当age=10  的时候也可以进行 独立的qps阈值配置，设置qps=100比较大的值不会被拦截，当改为qps=1时候，即使值age=10一样被拦截
 ```
 
-:flags:  系统规则
 
-自定义
+
+
+
+## ==授权规则4.6.4==
+
+
+
+例如请求C服务器的可能来自A ，B 服务器，如在特殊时期限制 B服务器的请求来源， 就可以使用
+
+例如黑白名单的使用
+
+```
+public class RequestOriginParserDefinition implements RequestOriginParser {
+就是使用RequestOriginParser接口来区分数据来源 进一步，限制数据请求
+```
+
+
+
+## ==系统规则4.6.5==
+
+
+
+
+
+
+
+
+
+## ==自定义规则异常返回==
+
+
 
 ![32](D:/音乐图片/typora图片/image-20220529001825151.png)
 
